--- a/anime-detail.html
+++ b/anime-detail.html
@@ -182,6 +182,7 @@
   <audio id="akame-ost" loop><source src="https://www.dropbox.com/scl/fi/zk69qocarilx6zuwto65x/akame-ga-kill-Opening-1-Full.mp3?rlkey=t474skov33gnlo751s88ehgip&st=aq8dksxr&raw=1" type="audio/mpeg"></audio>
   <audio id="Demonslayer-ost" loop><source src="https://www.dropbox.com/scl/fi/x5fkwig7j4tsb1s1fybqp/Kimetsu-No-Yaiba-OP.1-Gurenge-Sub.-Espa-ol-Romaji-AMV.mp3?rlkey=14qprvf10rzoblirr4c0o0cyt&st=mnh4fsql&raw=1" type="audio/mpeg"></audio>
   <audio id="Demonslayer2-ost" loop><source src="https://www.dropbox.com/scl/fi/suitir3qj3yb67nb0y4c8/Demon-Slayer-T4-Cap-8-online-video-cutter.com-1.mp3?rlkey=klxtyy3z77fvrhfgoycrip29b&st=lbjqdgqo&raw=1" type="audio/mpeg"></audio>
+  <audio id="Demonslayer3-ost" loop><source src="https://www.dropbox.com/scl/fi/05a1qf9ivt2f1cj584acp/Kamado-Tanjirou-no-Uta-From-Demon-Slayer-Kimetsu-no-Yaiba-Full-Version.mp3?rlkey=pk8v3ixnr3nbwqdmushtnscqm&st=zwvcx6u4&raw=1" type="audio/mpeg"></audio>
   <audio id="herox-ost" loop><source src="https://www.dropbox.com/scl/fi/qco7a2km0hx8b6pdor0sf/TO-BE-HERO-X-Ending-FULL-KONTINUUM-by-SennaRin-Lyrics.mp3?rlkey=ba7b47vkvcs7pfjh84fv33ann&st=r7dzkw7i&raw=1" type="audio/mpeg"></audio>
   <audio id="maou2099-ost" loop><source src="https://www.dropbox.com/scl/fi/4lt2eo48s332etw2tv1sn/Maou-2099-Opening-Full-Shiyui-Hollow.mp3?rlkey=alnrpw2xm1qpqxlwgxmv1jb18&st=pc8iwkyl&raw=1" type="audio/mpeg"></audio>
   <audio id="al-ost" loop><source src="https://www.dropbox.com/scl/fi/tuaxm8zttc83ymbn4bv2w/Alya-Sometimes-Hides-Her-Feelings-in-Russian-Opening-Ichiban-Kagayaku-Hoshi.mp3?rlkey=v2uqxurdgbojls9urj300h0z1&st=1mw6vpvg&raw=1" type="audio/mpeg"></audio>
@@ -214,6 +215,9 @@
   <audio id="Oredake-ost" loop><source src="https://www.dropbox.com/scl/fi/xmqp2paia6h97fkwa7h6b/Pyramid-Daigyakuten-by-Spira-Spica-Ore-dake-Haireru-Kakushi-Dungeon-Opening.mp3?rlkey=3s0aeay9delzf6gavjj4bjxih&st=ued84mx7&raw=1" type="audio/mpeg"></audio>
   <audio id="OnePunch-ost" loop><source src="https://www.dropbox.com/scl/fi/hqjhazpztx23zcjffuh09/One-punch-man-The-Hero-OP-1-sub.-espa-ol-lyrics-letra.mp3?rlkey=z3bm1s9eoxzpcw3m6yslkhhl7&st=osh0hwc3&raw=1" type="audio/mpeg"></audio>
   <audio id="Mashle-ost" loop><source src="https://www.dropbox.com/scl/fi/i4j87l2yp0vh4bf9vjasu/Creepy-Nuts-Bling-Bang-Bang-Born-TV-Anime-MASHLE-Collaboration-Music-Video-BBBB-1.mp3?rlkey=3vdjejznfw9yos02dudg1cgw7&st=g94kl144&raw=1" type="audio/mpeg"></audio>
+  <audio id="Maomao1-ost" loop><source src="https://www.dropbox.com/scl/fi/rzk39yz830r8qqwh236z5/Mrs.-GREEN-APPLE.mp3?rlkey=4yg7zzw70lbl3w5pnzatmy8d7&st=tcuzvxlo&raw=1" type="audio/mpeg"></audio>
+  <audio id="Maomao2-ost" loop><source src="https://www.dropbox.com/scl/fi/zv6jviz9o2qcnujlhlbwq/Kusuriya-no-Hitorigoto-Season-2-Opening-Full-Hyakka-Ryouran-by-Lilas-Ikuta-Sub.-Espa-ol.mp3?rlkey=zormm7udq5mzrwx5u0qli78ml&st=uj2wxfzw&raw=1" type="audio/mpeg"></audio>
+  <audio id="Maomao3-ost" loop><source src="https://www.dropbox.com/scl/fi/youf3p9vfcf57zg3i9kfz/ED-24-55.mp3?rlkey=4crxopjhxx8b3dd68lt42gc6e&st=k65gdc5m&raw=1" type="audio/mpeg"></audio>
 
   <!-- CONTENEDOR PRINCIPAL -->
   <div class="container">
@@ -2320,6 +2324,76 @@
           }
         ]
       },
+      42: {
+        title: "Los Diarios de la Boticaria",
+        desc: "Maomao llevaba una vida tranquila ayudando a su padre, un boticario. Todo cambia el día que la venden como sirvienta al palacio del emperador, pero la vida entre nobles y realeza no es para ella. Cuando la familia imperial enferma, ella decide intervenir para encontrar una cura, lo que llama la atención de Jinshi, un guapo oficial de palacio que decide ascenderla como dama de compañía de una de las concubinas del emperador. ¡Su habilidad con la medicina la hará conocida en el palacio por ayudar a resolver muchos misterios!",
+        cover: "maomaot1.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/ulsbjhkml29ya0bx5rvip/maomaott1.jpg?rlkey=d31ch377s5fiejauwmxr4jc5s&st=f9332p29&raw=1",
+            eps: [
+              { title: "Los Diarios de la Boticaria T1 Cap 1"},
+              { title: "Los Diarios de la Boticaria T1 Cap 2"},
+              { title: "Los Diarios de la Boticaria T1 Cap 3"},
+              { title: "Los Diarios de la Boticaria T1 Cap 4"},
+              { title: "Los Diarios de la Boticaria T1 Cap 5"},
+              { title: "Los Diarios de la Boticaria T1 Cap 6"},
+              { title: "Los Diarios de la Boticaria T1 Cap 7"},
+              { title: "Los Diarios de la Boticaria T1 Cap 8"},
+              { title: "Los Diarios de la Boticaria T1 Cap 9"},
+              { title: "Los Diarios de la Boticaria T1 Cap 10"},
+              { title: "Los Diarios de la Boticaria T1 Cap 11"},
+              { title: "Los Diarios de la Boticaria T1 Cap 12"},
+              { title: "Los Diarios de la Boticaria T1 Cap 13"},
+              { title: "Los Diarios de la Boticaria T1 Cap 14"},
+              { title: "Los Diarios de la Boticaria T1 Cap 15"},
+              { title: "Los Diarios de la Boticaria T1 Cap 16"},
+              { title: "Los Diarios de la Boticaria T1 Cap 17"},
+              { title: "Los Diarios de la Boticaria T1 Cap 18"},
+              { title: "Los Diarios de la Boticaria T1 Cap 19"},
+              { title: "Los Diarios de la Boticaria T1 Cap 20"},
+              { title: "Los Diarios de la Boticaria T1 Cap 21"},
+              { title: "Los Diarios de la Boticaria T1 Cap 22"},
+              { title: "Los Diarios de la Boticaria T1 Cap 23"},
+              { title: "Los Diarios de la Boticaria T1 Cap 24"},
+            ]
+          },
+          {
+            num: 2,
+            cover: "https://www.dropbox.com/scl/fi/4okrn42bx3gn32mgbhliq/kusuriya-s2.jpg?rlkey=yyrkl50fzfxc5kn4ntxmp1tju&st=mfvfr1yc&raw=1",
+            eps: [
+              { title: "Los Diarios de la Boticaria T2 Cap 1"},
+              { title: "Los Diarios de la Boticaria T2 Cap 2"},
+              { title: "Los Diarios de la Boticaria T2 Cap 3"},
+              { title: "Los Diarios de la Boticaria T2 Cap 4"},
+              { title: "Los Diarios de la Boticaria T2 Cap 5"},
+              { title: "Los Diarios de la Boticaria T2 Cap 6"},
+              { title: "Los Diarios de la Boticaria T2 Cap 7"},
+              { title: "Los Diarios de la Boticaria T2 Cap 8"},
+              { title: "Los Diarios de la Boticaria T2 Cap 9"},
+              { title: "Los Diarios de la Boticaria T2 Cap 10"},
+              { title: "Los Diarios de la Boticaria T2 Cap 11"},
+              { title: "Los Diarios de la Boticaria T2 Cap 12"},
+              { title: "Los Diarios de la Boticaria T2 Cap 13"},
+              { title: "Los Diarios de la Boticaria T2 Cap 14"},
+              { title: "Los Diarios de la Boticaria T2 Cap 15"},
+              { title: "Los Diarios de la Boticaria T2 Cap 16"},
+              { title: "Los Diarios de la Boticaria T2 Cap 17"},
+              { title: "Los Diarios de la Boticaria T2 Cap 18"},
+              { title: "Los Diarios de la Boticaria T2 Cap 19"},
+              { title: "Los Diarios de la Boticaria T2 Cap 20"},
+              { title: "Los Diarios de la Boticaria T2 Cap 21"},
+              { title: "Los Diarios de la Boticaria T2 Cap 22"},
+              { title: "Los Diarios de la Boticaria T2 Cap 23"},
+              { title: "Los Diarios de la Boticaria T2 Cap 24"},
+            ]
+          }
+        ]
+      },
+
+
+
 
     };
 
@@ -2472,7 +2546,7 @@
         7: ['st-ost'],
         8: ['akame-ost'],
         9: ['herox-ost'],
-        10: ['Demonslayer-ost','Demonslayer2-ost'],
+        10: ['Demonslayer-ost','Demonslayer2-ost','Demonslayer3-ost'],
         11: ['maou2099-ost'],
         12: ['wi-ost'],
         13: ['iz-ost'],
@@ -2504,6 +2578,7 @@
         39: ['Oredake-ost'],
         40: ['OnePunch-ost'],
         41: ['Mashle-ost'],
+        42: ['Maomao1-ost','Maomao2-ost','Maomao3-ost'],
       };
 
       // no pausamos ni reseteamos nada aquí (tal como pediste)
