--- a/video-player.html
+++ b/video-player.html
@@ -1534,6 +1534,60 @@
           "12": { link:'https://www.dropbox.com/scl/fi/ie5wg18o9y38dmque5yof/Mashle-T2-Cap-12.mp4?rlkey=00mvms2qhkglyv5h2d01qzdhh&st=ylj3witw&raw=1', title:'Mashle T2 Cap 12' },
         }
       },
+      "42": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/728ldrvihw493vel7jf5z/Los-diarios-de-la-boticaria-T1-Cap-1.mp4?rlkey=xqzzjujq4lutrlvlg36pz94kh&st=xkwergpg&raw=1', title:'Los Diarios de la Boticaria T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/kv314zfjo9ey7zt0t5s2j/Los-diarios-de-la-boticaria-T1-Cap-2.mp4?rlkey=ufgb5afdmmqw6qip63rmm8rp9&st=897epsm2&raw=1', title:'Los Diarios de la Boticaria T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/c0ehb2cbvqn3qnckqo8yh/Los-diarios-de-la-boticaria-T1-Cap-3.mp4?rlkey=wk0tk6h28k8s06wjqg2yy32sh&st=phmo3hdk&raw=1', title:'Los Diarios de la Boticaria T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/8d0r3n9g7ieq67x29t8q0/Los-diarios-de-la-boticaria-T1-Cap-4.mp4?rlkey=nvjzoxo3ylm34p4u98j2ze88x&st=m4l0l0da&raw=1', title:'Los Diarios de la Boticaria T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/1djlbnueyq1q4w8qro2jr/Los-diarios-de-la-boticaria-T1-Cap-5.mp4?rlkey=n2peoj3d82gmymc4cqlq0oz8g&st=5hzrgmys&raw=1', title:'Los Diarios de la Boticaria T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/gi7beo4gyngmmawf79pev/Los-diarios-de-la-boticaria-T1-Cap-6.mp4?rlkey=nn40erhcfdi0p0u1iixcfo81p&st=82f1ynel&raw=1', title:'Los Diarios de la Boticaria T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/bz8j4y7jjqi8lrw7bm6rh/Los-diarios-de-la-boticaria-T1-Cap-7.mp4?rlkey=cwa9sasl15hm4v4mdz685y3os&st=dy5tzw1h&raw=1', title:'Los Diarios de la Boticaria T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/edh5miwwq2sjzc2l3tmui/Los-diarios-de-la-boticaria-T1-Cap-8.mp4?rlkey=5rnlyi30d4o6rl6uefsajvgx4&st=a75jz3rn&raw=1', title:'Los Diarios de la Boticaria T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/g1w8slqvrlx0mk7nqvoup/Los-diarios-de-la-boticaria-T1-Cap-9.mp4?rlkey=4kr44e04sfb2oyvlag3ulxmml&st=5updlm5e&raw=1', title:'Los Diarios de la Boticaria T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/y7e87ddpeno0fm598j6e1/Los-diarios-de-la-boticaria-T1-Cap-10.mp4?rlkey=hyxufcm4asdy722mcl6illqhd&st=jfe1d18o&raw=1', title:'Los Diarios de la Boticaria T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/qbkv9u1urbr3efx6vvons/Los-diarios-de-la-boticaria-T1-Cap-11.mp4?rlkey=0y21ko2t51s1rbda15h3gsj38&st=s6799x6v&raw=1', title:'Los Diarios de la Boticaria T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/c6mz7bkzr79r6sl5u9nth/Los-diarios-de-la-boticaria-T1-Cap-12.mp4?rlkey=abkj84vrcn7c6zpc5zk8d3wkl&st=z93dm1bb&raw=1', title:'Los Diarios de la Boticaria T1 Cap 12' }
+          "13": { link:'https://www.dropbox.com/scl/fi/nlamhnkgf4d2b9rw0isan/Los-diarios-de-la-boticaria-T1-Cap-13.mp4?rlkey=7iwdjz08cqrt4zgp7t015qlpb&st=iezrstdq&raw=1', title:'Los Diarios de la Boticaria T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/okgkvw1pcmlr4vb5hd1zm/Los-diarios-de-la-boticaria-T1-Cap-14.mp4?rlkey=tga5g7rol2dp3rj068kv6hihu&st=jpzpnrig&raw=1', title:'Los Diarios de la Boticaria T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/gjqtkezwgbo23zp2wqj9a/Los-diarios-de-la-boticaria-T1-Cap-15.mp4?rlkey=8z098rfgg9hw6h57yjr5ml288&st=fvry3r89&raw=1', title:'Los Diarios de la Boticaria T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/4r719keqrhmtgfkbrttn1/Los-diarios-de-la-boticaria-T1-Cap-16.mp4?rlkey=q6rvrwcj0wllxoanuc3j9knxp&st=0s16eob5&raw=1', title:'Los Diarios de la Boticaria T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/t5o9vuajk1310vkwbfbut/Los-diarios-de-la-boticaria-T1-Cap-17.mp4?rlkey=gkay5z05d2gkwgf4wvgjkmcom&st=sv18hr01&raw=1', title:'Los Diarios de la Boticaria T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/5e1g8fyp93raziy2xs379/Los-diarios-de-la-boticaria-T1-Cap-18.mp4?rlkey=urko9x8ckiy929pn2u6tu56t9&st=btnzysfm&raw=1', title:'Los Diarios de la Boticaria T1 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/m9pvog4y0uifgst8pcayw/Los-diarios-de-la-boticaria-T1-Cap-19.mp4?rlkey=5su8smnmwq25qfbpz1yso45fo&st=ct6eey1r&raw=1', title:'Los Diarios de la Boticaria T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/6wr85dv2edurfsuqb2ykx/Los-diarios-de-la-boticaria-T1-Cap-20.mp4?rlkey=475njiya0r9ed6wopjud7vq88&st=t72fb7dl&raw=1', title:'Los Diarios de la Boticaria T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/0ojjzgsf243732wowbavg/Los-diarios-de-la-boticaria-T1-Cap-21.mp4?rlkey=1rm82z29mdv1dsmdhxmpqfccq&st=gj4cfb70&raw=1', title:'Los Diarios de la Boticaria T1 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/vi9q0ucd6tp42afov17u2/Los-diarios-de-la-boticaria-T1-Cap-22.mp4?rlkey=ap48vltusai0safpb42eej547&st=a4t201vp&raw=1', title:'Los Diarios de la Boticaria T1 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/45lc05cxmmrtmm6iaykgw/Los-diarios-de-la-boticaria-T1-Cap-23.mp4?rlkey=fnvv9l9kts04nrhec2li89zza&st=vhs589m1&raw=1', title:'Los Diarios de la Boticaria T1 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/i3qf9tj8pyxpj6odnuwd3/Los-diarios-de-la-boticaria-T1-Cap-24.mp4?rlkey=eu3n2qbirzmbn3z9x3j4te233&st=ztv1m6i4&raw=1', title:'Los Diarios de la Boticaria T1 Cap 24' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/57t21h15kbfeacdb3sj9n/Los-diarios-de-la-boticaria-T2-Cap-1.mp4?rlkey=kmtayqfmft85yxv4cyyjm9mdp&st=vbdqtdfz&raw=1', title:'Los Diarios de la Boticaria T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/pvil94m2qfbj9ve6nhuy1/Los-diarios-de-la-boticaria-T2-Cap-2.mp4?rlkey=f9259pj9b3ddel2fjg0zoryr3&st=ks0fzxap&raw=1', title:'Los Diarios de la Boticaria T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/v05o153unrv41u27swz8w/Los-diarios-de-la-boticaria-T2-Cap-3.mp4?rlkey=0thqebf615ncsr6b8pbogym52&st=8llxkhz8&raw=1', title:'Los Diarios de la Boticaria T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/ombxs4no7ksv6jmj4uk4h/Los-diarios-de-la-boticaria-T2-Cap-4.mp4?rlkey=ac6cdnhbfwqguhn359i7z0hxs&st=0hiifrhk&raw=1', title:'Los Diarios de la Boticaria T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/83f2us0z4ciddcztsfn9b/Los-diarios-de-la-boticaria-T2-Cap-5.mp4?rlkey=8fofg4kubuowahejn63crod46&st=rofg6d61&raw=1', title:'Los Diarios de la Boticaria T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/cxm8uqzwr27tnot5wu06w/Los-diarios-de-la-boticaria-T2-Cap-6.mp4?rlkey=fkhxevqcups18zl5yl9y8f6n0&st=mdtlvroc&raw=1', title:'Los Diarios de la Boticaria T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/rmzyxvgsdhtaoc49qgxki/Los-diarios-de-la-boticaria-T2-Cap-7.mp4?rlkey=gmnqn6dctqspkfsc09kvp4957&st=czu27x4v&raw=1', title:'Los Diarios de la Boticaria T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/hm2zwj1ketwgm5lulg64v/Los-diarios-de-la-boticaria-T2-Cap-8.mp4?rlkey=ivulc4xsmbrr65cdh2896s83w&st=uu883jbq&raw=1', title:'Los Diarios de la Boticaria T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/9ne7xy08jn31j3rdsktmn/Los-diarios-de-la-boticaria-T2-Cap-9.mp4?rlkey=xjne7inkmekwqfm8jzslvl2uq&st=grj8y8m2&raw=1', title:'Los Diarios de la Boticaria T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/e75pw0qpjpy7550f1gypq/Los-diarios-de-la-boticaria-T2-Cap-10.mp4?rlkey=knbi8ie3b6hwld8botk7zj78c&st=uv3ah4ch&raw=1', title:'Los Diarios de la Boticaria T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/nk0jj3guweeq3mlvi2ycb/Los-diarios-de-la-boticaria-T2-Cap-11.mp4?rlkey=rpbfqqfxdffprr5wzpv1wbsa8&st=z9t5xqc5&raw=1', title:'Los Diarios de la Boticaria T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/u14yptw82f6z98olgg2tg/Los-diarios-de-la-boticaria-T2-Cap-12.mp4?rlkey=k6jkuvocif963e7spx8t7i59p&st=j87k7s53&raw=1', title:'Los Diarios de la Boticaria T2 Cap 12' }
+          "13": { link:'https://www.dropbox.com/scl/fi/02cwa21ggpakl6y65au13/Los-diarios-de-la-boticaria-T2-Cap-13.mp4?rlkey=12xdgd39rz7rifaqt49n00r66&st=ueaqav46&raw=1', title:'Los Diarios de la Boticaria T2 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/t9232k82mwphz2zm4kjnv/Los-diarios-de-la-boticaria-T2-Cap-14.mp4?rlkey=91idjjpymtksvucaiy7ktn2lz&st=s2ppmjug&raw=1', title:'Los Diarios de la Boticaria T2 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/2cd5neu5o9boj232devzu/Los-diarios-de-la-boticaria-T2-Cap-15.mp4?rlkey=lvkl9yklh3p9jgcjawhkit9sj&st=zfov3y5a&raw=1', title:'Los Diarios de la Boticaria T2 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/4qddkzbn3o12db7mbdenk/Los-diarios-de-la-boticaria-T2-Cap-16.mp4?rlkey=ob0zz2fw7g7v6bqo63ccicvkj&st=laaagyn9&raw=1', title:'Los Diarios de la Boticaria T2 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/2cbf2xs3ao9f6rpke8gk8/Los-diarios-de-la-boticaria-T2-Cap-17.mp4?rlkey=5kxf2if1swf4c1p6x3jx2gzwm&st=drpof2px&raw=1', title:'Los Diarios de la Boticaria T2 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/if6u30vr3ti7agr9inbsu/Los-diarios-de-la-boticaria-T2-Cap-18.mp4?rlkey=dpg721cf2q8h4dhy5m8qssbqv&st=paweyvo7&raw=1', title:'Los Diarios de la Boticaria T2 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/20zflfgdb4k5oe709xm1s/Los-diarios-de-la-boticaria-T2-Cap-19.mp4?rlkey=ii0y6fyifdhbkm941oapq1scr&st=t06ia97b&raw=1', title:'Los Diarios de la Boticaria T2 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/i1lt7zcvge99o4j90iivl/Los-diarios-de-la-boticaria-T2-Cap-20.mp4?rlkey=mxezzk0tkgofaaocmlwbu7esk&st=w0s6q35a&raw=1', title:'Los Diarios de la Boticaria T2 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/0cghym9o5r4fpui2n1m6e/Los-diarios-de-la-boticaria-T2-Cap-21.mp4?rlkey=fv2tpc8o9lebfgyzlupshwbiw&st=o4obheb8&raw=1', title:'Los Diarios de la Boticaria T2 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/d9ckq8al7e13d62cidtfe/Los-diarios-de-la-boticaria-T2-Cap-22.mp4?rlkey=43rsm4sndh7fhq0er7ibo08ky&st=iwbq07tw&raw=1', title:'Los Diarios de la Boticaria T2 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/41igchg2jsmzoxehni0i7/Los-diarios-de-la-boticaria-T2-Cap-23.mp4?rlkey=dj9kgne0r0irdlhs5j1478q1z&st=b6d6hpfi&raw=1', title:'Los Diarios de la Boticaria T2 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/0obc9yzorqgiz7lw9i0mp/Los-diarios-de-la-boticaria-T2-Cap-24.mp4?rlkey=yie5z9p2ar381u26hk00fwmno&st=5hv8cb7e&raw=1', title:'Los Diarios de la Boticaria T2 Cap 24' },
+        }
+      },
 
 
 
