--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2391,7 +2391,129 @@
           }
         ]
       },
-
+      43: {
+        title: "Maplestar",
+        desc: "✨𝗠𝗮𝗽𝗹𝗲𝘀𝘁𝗮𝗿, un creador de contenido y artista conocido por sus animaciones para adultos de personajes de anime",
+        cover: "pm.png",
+        seasons: [
+          {
+            num: 1,
+	    name: "Spy X Family",
+            cover: "https://www.dropbox.com/scl/fi/avjrkhe5q0yv4kqwrx4x0/Spy-x-Family-Yor-Forger-ganha-animacao-18-em-2D3.jpg?rlkey=18e6y2j4xk7255k9ktj3aglu8&st=mt2bb8ud&raw=1",
+            eps: [
+              { title: "Spy X Family 1 - Maplestar"},
+              { title: "Spy X Family 2 - Maplestar"},
+            ]
+          },
+          {
+            num: 2,
+	    name: "Alya Sometimes Hides Her Feelings In Russian",
+            cover: "https://www.dropbox.com/scl/fi/nmfbx7us1q9k5dh5qglfy/aliaM.jpg?rlkey=yath585uqogp214rxh7ulepf9&st=466xsoqv&raw=1",
+            eps: [
+              { title: "Alya Sometimes Hides Her Feelings In Russian - Maplestar"},
+            ]
+          },
+          {
+            num: 3,
+	    name: "Jujutsu Kaisen",
+            cover: "https://www.dropbox.com/scl/fi/fswo0t4mzwijbspj2v9g4/nobaraM.jfif?rlkey=e787f0szmw8n05ursu8hihqmy&st=aebv02ah&raw=1",
+            eps: [
+              { title: "Jujutsu Kaisen 1 - Maplestar"},
+              { title: "Jujutsu Kaisen 2 - Maplestar"},
+            ]
+          },
+          {
+            num: 4,
+	    name: "Konosuba",
+            cover: "https://www.dropbox.com/scl/fi/uzfdxexukg9sr4wp1z94w/aquaM.jfif?rlkey=igtyabr214tsilqnnhy5o1shx&st=lyjb3gm2&raw=1",
+            eps: [
+              { title: "Konosuba - Maplestar"},
+            ]
+          },
+          {
+            num: 5,
+	    name: "Chainsaw Man",
+            cover: "https://www.dropbox.com/scl/fi/nbr045h8grownaa3bu464/makimaM.jpg?rlkey=ewy21pxbt7mgop4yfrd9v1vo2&st=j6a6rtqw&raw=1",
+            eps: [
+              { title: "Chainsaw Man 1 - Maplestar"},
+              { title: "Chainsaw Man 2 - Maplestar"},
+            ]
+          },
+          {
+            num: 6,
+	    name: "Dan Da Dan",
+            cover: "https://www.dropbox.com/scl/fi/by32qz4bh39bx2yb34gwa/dan.jpg?rlkey=o64kxwhd1y9hmoskxghyvc22g&st=qqax6yc6&raw=1",
+            eps: [
+              { title: "Dan Da Dan - Maplestar"},
+            ]
+          },
+          {
+            num: 7,
+	    name: "Frieren",
+            cover: "https://www.dropbox.com/scl/fi/ggq2edhfeox5pnjd2sx5x/FERN.jpg?rlkey=7lyh8ni85qonzs5q768cd0zda&st=pf0aghys&raw=1",
+            eps: [
+              { title: "Frieren - Maplestar"},
+            ]
+          },
+          {
+            num: 8,
+	    name: "Nier: Automata",
+            cover: "https://www.dropbox.com/scl/fi/34xwkjrydls96q5z1hyre/8-min-nier.jpg?rlkey=0apo1w3wwod1r6d8l57amq2jo&st=23pwus4w&raw=1",
+            eps: [
+              { title: "Nier: Automata - Maplestar"},
+            ]
+          },
+          {
+            num: 9,
+	    name: "The Legend of Zelda: Tears of the Kingdom",
+            cover: "https://www.dropbox.com/scl/fi/kfads0r40zbqa963l5e7k/zelda.jpg?rlkey=6l6umzg4utnhwuf46vhheg4up&st=1gi08u5h&raw=1",
+            eps: [
+              { title: "The Legend of Zelda: Tears of the Kingdom 1 - Maplestar"},
+              { title: "The Legend of Zelda: Tears of the Kingdom 2 - Maplestar"},
+            ]
+          },
+          {
+            num: 10,
+	    name: "High School DxD",
+            cover: "https://www.dropbox.com/scl/fi/su4u2rau7cppordofr9ai/kudasai_dxd-74.jpg?rlkey=rayqt9zi559n32agnrzbymx2e&st=7jpc5q9o&raw=1",
+            eps: [
+              { title: "High School DxD - Maplestar"},
+            ]
+          },
+          {
+            num: 11,
+	    name: "Re:Zero",
+            cover: "https://www.dropbox.com/scl/fi/2fatzekmlexw5f0c6avfz/rezesroM.jpg?rlkey=oxfbyto5hf3680a1kipvp4j4h&st=y6evnq26&raw=1",
+            eps: [
+              { title: "Re:Zero - Maplestar"},
+            ]
+          },
+          {
+            num: 12,
+	    name: "Rent-A-Girlfriend",
+            cover: "https://www.dropbox.com/scl/fi/qjwxek3z34b2i97zrrndk/mizuharaM.jpg?rlkey=x5xkgdapedk1lcjow9weo6jm4&st=e2dtm2po&raw=1",
+            eps: [
+              { title: "Rent-A-Girlfriend - Maplestar"},
+            ]
+          },
+          {
+            num: 13,
+	    name: "My Dress-Up Darling",
+            cover: "https://www.dropbox.com/scl/fi/totid4w011l0ftg088jwf/erisM.jpg?rlkey=bv2zu5u17sst8k4cjct0l0e0u&st=7f5sh8co&raw=1",
+            eps: [
+              { title: "My Dress-Up Darling - Maplestar"},
+            ]
+          },
+          {
+            num: 14,
+	    name: "The Rising of the Shield Hero",
+            cover: "https://www.dropbox.com/scl/fi/d0gfqghwy4c5ny1k4uydw/tate.jpg?rlkey=s5nbk49nlerdhyzbxy6q0kgia&st=94zaxd74&raw=1",
+            eps: [
+              { title: "The Rising of the Shield Hero - Maplestar"},
+            ]
+          }
+        ]
+      },
 
 
 
