--- a/video-player.html
+++ b/video-player.html
@@ -1588,6 +1588,57 @@
           "24": { link:'https://www.dropbox.com/scl/fi/0obc9yzorqgiz7lw9i0mp/Los-diarios-de-la-boticaria-T2-Cap-24.mp4?rlkey=yie5z9p2ar381u26hk00fwmno&st=5hv8cb7e&raw=1', title:'Los Diarios de la Boticaria T2 Cap 24' },
         }
       },
+      "43": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/oynuf4tsiy30xuaf25dbo/Yor-X-Loid-Espa-ol-Maplestar.mp4?rlkey=60w7r9wkqkvzfc87gbovyl5ta&st=x2jn5p7a&raw=1', title:'Spy X Family 1 - Maplestar' },
+          "2": { link:'https://www.dropbox.com/scl/fi/2xku08fx3l169eoj84yvl/Yor-X-Loid-2-Espa-ol-Maplestar.mp4?rlkey=5irjgqsnbcfod0yi4jhg3ywgm&st=iucw4izn&raw=1', title:'Spy X Family 2 - Maplestar' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/8zshz5yaz8ieg7k4m8l4m/Alya-Sometimes-Hides-Her-Feelings-In-Russian-Espa-ol-Maplestar.mp4?rlkey=d1vcugz2v2daf3dlvbzkolsxf&st=2n65gs92&raw=1', title:'Alya Sometimes Hides Her Feelings In Russian - Maplestar' },
+        },
+        "3": {
+          "1": { link:'https://www.dropbox.com/scl/fi/1oclh84eqrm2pdibc7wug/Nobara-X-Itadori-Espa-ol-Maplestar.mp4?rlkey=856uv2y2pi87bcvrs8zfwpjhz&st=d0yyarke&raw=1', title:'Jujutsu Kaisen 1 - Maplestar' },
+          "2": { link:'https://www.dropbox.com/scl/fi/20dqg4xjmloscmwaakawd/Nobara-X-Itadori-2-Espa-ol-Maplestar.mp4?rlkey=7qh995axvt0260518tv43pcr4&st=wqop1mcj&raw=1', title:'Jujutsu Kaisen 2 - Maplestar' },
+        },
+        "4": {
+          "1": { link:'https://www.dropbox.com/scl/fi/5769745hjivphobjle24a/Aqua-X-Kasuma-Espa-ol-Maplestar.mp4?rlkey=hnr7wqda33eza55m6wzc79h0i&st=o2cff8yx&raw=1', title:'Konosuba - Maplestar' },
+        },
+        "5": {
+          "1": { link:'https://www.dropbox.com/scl/fi/icwx6v24laymogldw513e/Denji-X-Makima-Espa-ol-Maplestar.mp4?rlkey=g4uegob84oyqyvve5wre8pnou&st=4bqr4nx6&raw=1', title:'Chainsaw Man 1 - Maplestar' },
+          "2": { link:'https://www.dropbox.com/scl/fi/4xm609lu8g96qra8r6drn/Denji-X-Makima-2-Espa-ol-Maplestar.mp4?rlkey=7hbf9osgrwxh4h2hye0rx533n&st=mvd903is&raw=1', title:'Chainsaw Man 2 - Maplestar' },
+        },
+        "6": {
+          "1": { link:'https://www.dropbox.com/scl/fi/ctriibfqfda9ess5xjo8w/Dandadan-Espa-ol-Maplestar.mp4?rlkey=focs9hjwykcesobsono8s3q5b&st=0nlb9z16&raw=1', title:'Dan Da Dan - Maplestar' },
+        },
+        "7": {
+          "1": { link:'https://www.dropbox.com/scl/fi/hq06fig1utkxxfkosgf7v/Fern-X-Stark-Espa-ol-Maplestar.mp4?rlkey=ec0ct97jpyv9z89wku6cn1jv3&st=hwjcqjq1&raw=1', title:'Frieren - Maplestar' },
+        },
+        "8": {
+          "1": { link:'https://www.dropbox.com/scl/fi/c52qwuwf24oqfkjdneqer/Nier-Automata-Espa-ol-Maplestar.mp4?rlkey=4fg30rxabdbuaw08s0i76ttdc&st=3yhssa6h&raw=1', title:'Nier: Automata - Maplestar' },
+        },
+        "9": {
+          "1": { link:'https://www.dropbox.com/scl/fi/hm36ev962ojte54ty5uil/Zelda-Tears-The_Kingdom-Espa-ol-Maplestar.mp4?rlkey=piva9mtpoqhnrq3vh577i4zyd&st=y0wvc09i&raw=1', title:'The Legend of Zelda: Tears of the Kingdom 1 - Maplestar' },
+          "2": { link:'https://www.dropbox.com/scl/fi/jbam1juoa6qvei2d01csf/Purah-The-Legend-Of-Zelda-Espa-ol-Maplestar.mp4?rlkey=74a7j6b1e6lpau7mqnkmmkjs4&st=dtt3v9w5&raw=1', title:'The Legend of Zelda: Tears of the Kingdom 2 - Maplestar' },
+        },
+        "10": {
+          "1": { link:'https://www.dropbox.com/scl/fi/t4qxgu9mdaz4nzpmrwkrh/Rias-X-Issei-Espa-ol-Maplestar.mp4?rlkey=rt713gbmmha17tpcesk27l5vo&st=hruhtxvb&raw=1', title:'High School DxD - Maplestar' },
+        },
+        "11": {
+          "1": { link:'https://www.dropbox.com/scl/fi/7tva7jw11ax8ueufy1bcs/Emilia-ReZero-Espa-ol-Maplestar.mp4?rlkey=nlpwfjivecsx3ep6acacnoonu&st=ay9ttsb5&raw=1', title:'Re:Zero - Maplestar' },
+        },
+        "12": {
+          "1": { link:'https://www.dropbox.com/scl/fi/a0axyqufmc945r5w9bat8/Mizuhara-Chizuru-Espa-ol-Maplestar.mp4?rlkey=3e8y5oc5hb1ffmjp1olrto5yi&st=r3lf31fm&raw=1', title:'Rent-A-Girlfriend - Maplestar' },
+        },
+        "13": {
+          "1": { link:'https://www.dropbox.com/scl/fi/475g2hz6cm5zzzu29u507/Mar-n-X-Gojo-Espa-ol-Maplestar.mp4?rlkey=aq420lzqo9o8m3atwok1syxlf&st=qg5eisiz&raw=1', title:'My Dress-Up Darling - Maplestar' },
+        },
+        "14": {
+          "1": { link:'https://www.dropbox.com/scl/fi/zhsdyr8t1pee4b8p4xfms/The-Rising-of-the-Shield-Hero-Maplestar.mp4?rlkey=hu238mo45s3sckdqlucq15xj3&st=62npwezw&raw=1', title:'The Rising of the Shield Hero - Maplestar' },
+        }
+      },
+
+
+
 
     };
     // Guardar posición al volver
