--- a/anime-detail.html
+++ b/anime-detail.html
@@ -2466,7 +2466,7 @@
           {
             num: 9,
 	    name: "The Legend of Zelda: Tears of the Kingdom",
-            cover: "https://www.dropbox.com/scl/fi/kfads0r40zbqa963l5e7k/zelda.jpg?rlkey=6l6umzg4utnhwuf46vhheg4up&st=1gi08u5h&raw=1",
+            cover: "https://www.dropbox.com/scl/fi/hq01tsig0ac9h2e8wq3rp/zelda-1.jpg?rlkey=z5i1ghzkn0np8009d39t01lma&st=jb28zqch&raw=1",
             eps: [
               { title: "The Legend of Zelda: Tears of the Kingdom 1 - Maplestar"},
               { title: "The Legend of Zelda: Tears of the Kingdom 2 - Maplestar"},
