--- a/video-player.html
+++ b/video-player.html
@@ -1591,7 +1591,7 @@
       "43": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/oynuf4tsiy30xuaf25dbo/Yor-X-Loid-Espa-ol-Maplestar.mp4?rlkey=60w7r9wkqkvzfc87gbovyl5ta&st=x2jn5p7a&raw=1', title:'Spy X Family 1 - Maplestar' },
-          "2": { link:'https://www.dropbox.com/scl/fi/tty3xkofhc0bvvqx5a0u6/Yor-X-Loid-2-Espa-ol-Maplestar.mp4?rlkey=0dbaa043u2qmjbfjj6qnyaoo4&st=grq3m77j&raw=1', title:'Spy X Family 2 - Maplestar' },
+          "2": { link:'https://www.dropbox.com/scl/fi/aoczgvzx3o2fiqns7awao/Yor-X-Loid-2-Espa-ol-Maplestar.mp4?rlkey=qpzaczed8r3yk0u2brhbhxx0v&st=808mdhtz&raw=1', title:'Spy X Family 2 - Maplestar' },
         },
         "2": {
           "1": { link:'https://www.dropbox.com/scl/fi/8zshz5yaz8ieg7k4m8l4m/Alya-Sometimes-Hides-Her-Feelings-In-Russian-Espa-ol-Maplestar.mp4?rlkey=d1vcugz2v2daf3dlvbzkolsxf&st=2n65gs92&raw=1', title:'Alya Sometimes Hides Her Feelings In Russian - Maplestar' },
